# agent_find_leads_events

./: .env.example  .gitignore  README.md  app.py  config.py  database.py  debug.py  graph.py  leads.db  main.py  pyproject.toml  test_mailchimp_validation.py  tools.py  trace.txt  verify_leaddata.py  verify_mailchimp_payload.py
.github/workflows/: deploy-on-push.yml
documentacion/: analisis_proyecto.md  project_analysis.md
scripts/: install_ollama_linux.sh  install_ollama_windows.ps1  test_mcp_integration.py
