[project]
name = "agent-find-leads-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "gradio>=6.9.0",
    "langchain>=1.2.11",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.0",
    "mailchimp3>=3.0.21",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "twilio>=9.10.3",
]
